--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,6 +2,6 @@
 <resources>
 
     <style name="Theme.YYC_Hacks_2022" parent="android:Theme.Material.Light.NoActionBar">
-        <item name="android:statusBarColor">#801E00</item>
+        <item name="android:statusBarColor">#78102E</item>
     </style>
 </resources>
