--- a/server/static/css/surveystyle.css
+++ b/server/static/css/surveystyle.css
@@ -6,24 +6,33 @@ body {
   justify-content: center;
 }
 
-header{
-/*   display: flex;
-  justify-content: center; */
-  margin-top: 2em;
+div.logo {
+  cursor: pointer;
+  margin-right: auto;
+}
+
+div.header{
+  background-color: white;
+  position: -webkit-sticky;
+  position: sticky;
+  top:0;
+  padding:5px;
 }
 /* STYLE TEXT */
 h1{
-  font-style:none;
-  color:#C8102E;
-  margin-top: 2em;
+  padding: 0;
+  font-style:"Open sans";
+  color:rgb(200,16,46);
+  font-size:2vw;
   text-align: center;
   
 }
 
 h2 {
-  font-style:none;
-  color:#C8102E;
-  margin-top: 2em; 
+  padding: 0;
+  font-style:"Open Sans";
+  color:rgb(200,16,46);
+  font-size:1.5vw;
    text-align: center;
 }
 .container{
@@ -33,26 +42,31 @@ h2 {
 }
 .answer {
   margin: 5px;
+  justify-content: center;
+  text-align:center;
 }
 
 .answer img {
   border-radius:10px;
-  border-color: #C8102E;
+  border-color: rgb(200,16,46);
   border-width: 5px;
-  width:540px; /* you can use % */
-  height: auto;
+  width:500px; 
+  max-width: 100%;
+  height: 360px; 
+  object-fit: cover;
   display: block;
+  
 }
 
 .answer button{
-  background-color: #C8102E;
+  background-color:rgb(200,16,46);
   border: none;
   color: white;
-  padding: 10px 20px;
+  padding: 15px 50px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
-  font-size: 16px;
+  font-size: 20px;
   border-radius :12px;
   cursor: pointer;
   transition-duration:0.3s;
@@ -60,7 +74,7 @@ h2 {
 button:hover{
   border-style: solid;
   border-width: 5px;
-  border-color:#C8102E;
-  color:#C8102E; 
+  border-color:rgb(200,16,46);
+  color:rgb(200,16,46);
   background-color: white;
 }
