--- a/server/static/css/style.css
+++ b/server/static/css/style.css
@@ -9,6 +9,24 @@ html {
 /*   font-family:  */
 }
 
+div.featured_businesses{
+  background-color: white;
+  width: 100%;
+  height: 80vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.local{
+  background-image:  url("../img/local.png");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+  
+}
+
+
 body {
   background-image: linear-gradient(rgba(4,9,30,0.5),rgba(4,9,30,0.5)), url("../img/calgary.jpg");
   background-repeat: no-repeat;
@@ -42,6 +60,13 @@ header {
 
 h1 {
   color: white;
+  font-family: "Roboto",Arial, Helvetica, sans-serif;
+  
+}
+
+h3{
+  color: rgb(200,16,46);
+  font-family: "Roboto",Arial, Helvetica, monospace;
   
 }
 
@@ -54,6 +79,8 @@ h1 {
   padding: 0px 20px;
 }
 
+.navbar 
+
 .navbar i a {
   transition: all 0.3s ease 0s;
 }
@@ -64,7 +91,7 @@ h1 {
 
 #loginbtn{
   margin-left: 20px;
-  padding: 9px 25px;
+  padding: 9px 20px;
   background-color: rgb(200,16,46);
   border: none;
   border-radius: 5px;
@@ -87,8 +114,8 @@ h1 {
   border-radius: 5px;
   cursor: pointer;
   transition: all 0.3s ease 0s;
-  width: 400px;
-  height: 50px;
+  width: 450px;
+  height: 80px;
 }
 #btn2 {
   color: rgb(200,16,46);
@@ -125,3 +152,21 @@ h1 {
   color: rgb(200,16,46);
 }
 
+.shadowbox {
+  width: 100%;
+  height:13cm;
+  border: 1px solid #11053b;
+  box-shadow: 8px 8px 5px #444;
+  padding: 8px 12px;
+  background: #919191 ;
+  border-radius: 5px
+}
+
+h1 {
+  font-size: 80px;
+  text-align: center;
+}
+
+.btn-group {
+  text-align: center;
+}
